force-app/main/default/objects/Integration_Error__c/Integration_Error__c.object-meta.xml
<CustomObject>
    <description>Automatically generated error logs from integration processes.</description>
    <label>Integration Error</label>
    <nameField>
        <label>Integration Error Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Integration Errors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>