force-app/main/default/objects/Integration_Error__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <description>AUTO - The date of the error.</description>
    <label>Date</label>
    <type>Date</type>
</CustomField>