force-app/main/default/objects/Integration_Error__c/fields/Origin_Class__c.field-meta.xml
<CustomField>
    <fullName>Origin_Class__c</fullName>
    <description>AUTO - The Apex class that originated the error.</description>
    <label>Origin Class</label>
    <length>80</length>
    <type>Text</type>
</CustomField>