force-app/main/default/objects/Integration_Error__c/fields/Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Record_Id__c</fullName>
    <description>AUTO - Salesforce record id, if one exists.</description>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>